# Rosetta

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: mkdocs_publish.yml
Notes/GitHub Action/Conditions to control job execution/: index.html
Notes/GitHub Action/GitHub Action for Mkdocs/: index.html
Notes/Kubernetes/Setup Rancher Desktop in Windows with WSL2/: index.html
Notes/PowerShell/PowerShell Alias/: index.html
Resources/Kubernetes/: index.html
rosetta/: CNAME  index.md
rosetta/Extras/stylesheets/: extra.css
rosetta/Notes/GitHub Action/: Conditions to control job execution.md  GitHub Action for Mkdocs.md
rosetta/Notes/Kubernetes/: Setup Rancher Desktop in Windows with WSL2.md
rosetta/Notes/PowerShell/: PowerShell Alias.md
rosetta/Resources/: Kubernetes.md
search/: search_index.json
